--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@types/react-icons": "^3.0.0",
+    "@vercel/node": "^1.12.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "moment": "^2.29.1",
+    "mongodb": "^4.1.1",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -21,6 +23,7 @@
     "sass": "^1.34.1"
   },
   "devDependencies": {
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
